Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/029_expected_2_given1_joker.xi
f(): int

g()
{
    x:int, _ = f()
}
//@PRACOWNIA
//@should_not_typecheck
